styles scrollbar and fixes some bugs

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,10 +1,28 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;900&display=swap');
 
+$prime: #16264b;
+$secondary: #0e87a7;
+$sec-hover: #09c1de;
+$third-bright: #346E6E;
+$third: #0E4343;
+
 *{
   margin: 0;
   padding: 0;
   font-family: 'Roboto', sans-serif;
   overflow-x: hidden;
+  scrollbar-width: thin;
+  scrollbar-color: $prime $third;
+} 
+*::-webkit-scrollbar{
+  width: 6px;
+}
+
+*::-webkit-scrollbar-track {
+  background: $third;
+}
+*::-webkit-scrollbar-thumb {
+  background-color: $prime;
 }
 
 h1{
